tests/expectations/compiler/storage/modify_external_vec_fail.out
Error [ETYC0372108]: Cannot use operation `push` on external vectors.
    --> compiler-test:11:13
     |
  11 |             provider.aleo/nums.push(3u32);         // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = The only valid operations on external vectors are `get` and `len`.
Error [ETYC0372108]: Cannot use operation `pop` on external vectors.
    --> compiler-test:12:13
     |
  12 |             provider.aleo/nums.pop();              // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = The only valid operations on external vectors are `get` and `len`.
Error [ETYC0372108]: Cannot use operation `set` on external vectors.
    --> compiler-test:13:13
     |
  13 |             provider.aleo/nums.set(0u32, 99u32);   // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = The only valid operations on external vectors are `get` and `len`.
Error [ETYC0372108]: Cannot use operation `clear` on external vectors.
    --> compiler-test:14:13
     |
  14 |             provider.aleo/nums.clear();            // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = The only valid operations on external vectors are `get` and `len`.
Error [ETYC0372108]: Cannot use operation `swap_remove` on external vectors.
    --> compiler-test:15:13
     |
  15 |             provider.aleo/nums.swap_remove(1u32);  // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = The only valid operations on external vectors are `get` and `len`.


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown variable `provider.aleo/nums`
    --> compiler-test:11:13
     |
  11 |             provider.aleo/nums.push(3u32);         // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `provider.aleo/nums`
    --> compiler-test:12:13
     |
  12 |             provider.aleo/nums.pop();              // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `provider.aleo/nums`
    --> compiler-test:13:13
     |
  13 |             provider.aleo/nums.set(0u32, 99u32);   // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `provider.aleo/nums`
    --> compiler-test:14:13
     |
  14 |             provider.aleo/nums.clear();            // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `provider.aleo/nums`
    --> compiler-test:15:13
     |
  15 |             provider.aleo/nums.swap_remove(1u32);  // ❌ illegal external mutation
     |             ^^^^^^^^^^^^^^^^^^
